Removed Azure references

--- a/source/Conference/Conference.Web.Public/Web.config
+++ b/source/Conference/Conference.Web.Public/Web.config
@@ -16,10 +16,17 @@
     <add key="InstrumentationEnabled" value="false" />
   </appSettings>
   <connectionStrings>
+    <!--
     <add name="DbContext.ConferenceRegistration" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DbContext.Payments" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DbContext.SqlBus" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DbContext.BlobStorage" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
+    -->
+    <add name="DbContext.ConferenceRegistration" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.Payments" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.SqlBus" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.BlobStorage" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <system.web>
     <globalization uiCulture="en" culture="en-US" />
@@ -77,7 +84,8 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="Data Source=.\SQLEXPRESS; Integrated Security=True; MultipleActiveResultSets=True" />
+        <!--parameter value="Data Source=.\SQLEXPRESS; Integrated Security=True; MultipleActiveResultSets=True" /-->
+        <parameter value="Server=localhost,1433;Integrated Security=False;User Id=sa;Password=P@ssw0rd1;MultipleActiveResultSets=True" />
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
