--- a/source/DatabaseInitializer/App.config
+++ b/source/DatabaseInitializer/App.config
@@ -5,12 +5,16 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
   </configSections>
   <appSettings>
-    <add key="defaultConnection" value="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True"/>
+    <!--add key="defaultConnection" value="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True"/>-->
+    <add key="defaultConnection" value="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1"/>
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
       <parameters>
+        <!--
         <parameter value="Data Source=.\SQLEXPRESS; Integrated Security=True; MultipleActiveResultSets=True"/>
+        -->
+        <parameter value="Server=localhost,1433;Integrated Security=False;User Id=sa;Password=P@ssw0rd1;MultipleActiveResultSets=True"/>
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
