--- a/source/Conference/Conference.Web/Conference.Web.Admin.csproj
+++ b/source/Conference/Conference.Web/Conference.Web.Admin.csproj
@@ -24,6 +24,8 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <Use64BitIISExpress />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,21 +54,19 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-    <!-- Begin Azure SDK specific conditionals -->
-    <PropertyGroup>
-        <AzureRuntimeAvailable>$(SolutionName.EndsWith('NoAzureSDK').Equals(false))</AzureRuntimeAvailable>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(AzureRuntimeAvailable) == 'true'">
-        <DefineConstants>$(DefineConstants);AZURESDK</DefineConstants>
-    </PropertyGroup>
-    <ItemGroup Condition="$(AzureRuntimeAvailable) == 'true'">
-        <Reference Include="Microsoft.WindowsAzure.Diagnostics, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <Compile Include="WebRole.cs">
-			<Visible>$(AzureRuntimeAvailable)</Visible>
-        </Compile>
-    </ItemGroup>
-    <!-- End Azure SDK specific conditionals -->
+  <!-- Begin Azure SDK specific conditionals -->
+  <PropertyGroup>
+    <AzureRuntimeAvailable>$(SolutionName.EndsWith('NoAzureSDK').Equals(false))</AzureRuntimeAvailable>
+  </PropertyGroup>
+  <PropertyGroup Condition="$(AzureRuntimeAvailable) == 'true'">
+    <DefineConstants>$(DefineConstants);AZURESDK</DefineConstants>
+  </PropertyGroup>
+  <ItemGroup Condition="$(AzureRuntimeAvailable) == 'true'">
+    <Compile Include="WebRole.cs">
+      <Visible>$(AzureRuntimeAvailable)</Visible>
+    </Compile>
+  </ItemGroup>
+  <!-- End Azure SDK specific conditionals -->
   <ItemGroup>
     <Reference Include="AutoMapper, Version=2.1.267.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -80,12 +80,6 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAzure.Configuration, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Microsoft.WindowsAzure.ConfigurationManager.1.7.0.1\lib\net35-full\Microsoft.WindowsAzure.Configuration.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\WindowsAzure.Storage.1.7.0.0\lib\net35-full\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.4.5.7\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -254,10 +248,6 @@
     <Content Include="Views\Shared\MaintenanceMode.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Infrastructure\Azure\Infrastructure.Azure\Infrastructure.Azure.csproj">
-      <Project>{56A53790-2571-4EA6-8742-2FA00E893B21}</Project>
-      <Name>Infrastructure.Azure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Infrastructure\Infrastructure\Infrastructure.csproj">
       <Project>{B5786D07-5888-4DF5-B295-3FEA593F3BFE}</Project>
       <Name>Infrastructure</Name>
