--- a/source/Conference/Conference.Web/Web.config
+++ b/source/Conference/Conference.Web/Web.config
@@ -9,9 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </configSections>
   <connectionStrings>
+    <!--
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-Conference.Web-2012412155219;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DbContext.ConferenceManagement" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DbContext.SqlBus" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
+    -->
+    <add name="DefaultConnection" connectionString="Server=localhost,1433;Database=aspnet-Conference.Web-2012412155219;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.ConferenceManagement" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.SqlBus" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -76,7 +81,10 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
       <parameters>
+        <!--
         <parameter value="Data Source=.\SQLEXPRESS; Integrated Security=True; MultipleActiveResultSets=True" />
+        -->
+        <parameter value="Server=localhost,1433;Integrated Security=False;User Id=sa;Password=P@ssw0rd1; MultipleActiveResultSets=True" />
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
