--- a/source/WorkerRoleCommandProcessor/app.config
+++ b/source/WorkerRoleCommandProcessor/app.config
@@ -8,6 +8,7 @@
     <supportedRuntime version="v4.0" />
   </startup>
   <connectionStrings>
+    <!--
     <add name="DbContext.EventStore" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DbContext.MessageLog" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DbContext.BlobStorage" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -16,11 +17,24 @@
     <add name="DbContext.Payments" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DbContext.SqlBus" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DbContext.ConferenceManagement" connectionString="Data Source=.\sqlexpress;Initial Catalog=conference;Integrated Security=True" providerName="System.Data.SqlClient" />
+    -->
+    <add name="DbContext.EventStore" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.MessageLog" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.BlobStorage" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.ConferenceRegistration" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.ConferenceRegistrationProcesses" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.Payments" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.SqlBus" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+    <add name="DbContext.ConferenceManagement" connectionString="Server=localhost,1433;Database=conference;Integrated Security=False;User Id=sa;Password=P@ssw0rd1" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
       <parameters>
+        <!--
         <parameter value="Data Source=.\SQLEXPRESS; Integrated Security=True; MultipleActiveResultSets=True" />
+        -->
+        <parameter value="Server=localhost,1433;Integrated Security=False;User Id=sa;Password=P@ssw0rd1;MultipleActiveResultSets=True" />
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
@@ -43,30 +57,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.serviceModel>
-    <extensions>
-      <!-- In this extension section we are introducing all known service bus extensions. User can remove the ones they don't need. -->
-      <behaviorExtensions>
-        <add name="connectionStatusBehavior" type="Microsoft.ServiceBus.Configuration.ConnectionStatusElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="transportClientEndpointBehavior" type="Microsoft.ServiceBus.Configuration.TransportClientEndpointBehaviorElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="serviceRegistrySettings" type="Microsoft.ServiceBus.Configuration.ServiceRegistrySettingsElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      </behaviorExtensions>
-      <bindingElementExtensions>
-        <add name="netMessagingTransport" type="Microsoft.ServiceBus.Messaging.Configuration.NetMessagingTransportExtensionElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="tcpRelayTransport" type="Microsoft.ServiceBus.Configuration.TcpRelayTransportElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="httpRelayTransport" type="Microsoft.ServiceBus.Configuration.HttpRelayTransportElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="httpsRelayTransport" type="Microsoft.ServiceBus.Configuration.HttpsRelayTransportElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="onewayRelayTransport" type="Microsoft.ServiceBus.Configuration.RelayedOnewayTransportElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      </bindingElementExtensions>
-      <bindingExtensions>
-        <add name="basicHttpRelayBinding" type="Microsoft.ServiceBus.Configuration.BasicHttpRelayBindingCollectionElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="webHttpRelayBinding" type="Microsoft.ServiceBus.Configuration.WebHttpRelayBindingCollectionElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="ws2007HttpRelayBinding" type="Microsoft.ServiceBus.Configuration.WS2007HttpRelayBindingCollectionElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="netTcpRelayBinding" type="Microsoft.ServiceBus.Configuration.NetTcpRelayBindingCollectionElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="netOnewayRelayBinding" type="Microsoft.ServiceBus.Configuration.NetOnewayRelayBindingCollectionElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="netEventRelayBinding" type="Microsoft.ServiceBus.Configuration.NetEventRelayBindingCollectionElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="netMessagingBinding" type="Microsoft.ServiceBus.Messaging.Configuration.NetMessagingBindingCollectionElement, Microsoft.ServiceBus, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      </bindingExtensions>
-    </extensions>
-  </system.serviceModel>
+  
 </configuration>
